commit translated contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.imagedata.yml
@@ -1,53 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ImageData:interface'
-    summary: 描述通过调用返回的数据的接口`image.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ImageData
-    fullName: Excel.Interfaces.ImageData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ImageData#format:member'
-      - 'excel!Excel.Interfaces.ImageData#id:member'
-  - uid: 'excel!Excel.Interfaces.ImageData#format:member'
-    summary: |-
-      返回图像的格式。
+### YamlMime:TSType
+name: Excel.Interfaces.ImageData
+uid: excel!Excel.Interfaces.ImageData:interface
+package: excel!
+fullName: Excel.Interfaces.ImageData
+summary: 描述通过调用返回的数据的接口 `image.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: format
+  uid: excel!Excel.Interfaces.ImageData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    返回图像的格式。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.PictureFormat | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ImageData#format~0:complex'
-  - uid: 'excel!Excel.Interfaces.ImageData#id:member'
-    summary: |-
-      指定 image 对象的形状标识符。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'excel!Excel.Interfaces.ImageData#format~0:complex'
-    name: Excel.PictureFormat | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"
-    fullName: Excel.PictureFormat | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"
-    spec.typeScript:
-      - uid: 'excel!Excel.PictureFormat:enum'
-        name: Excel.PictureFormat
-        fullName: Excel.PictureFormat
-      - name: ' | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"'
-        fullName: ' | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"'
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.PictureFormat | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG";'
+    return:
+      type: <xref uid="excel!Excel.PictureFormat:enum" /> | "UNKNOWN" | "BMP" | "JPEG" | "GIF" | "PNG" | "SVG"
+- name: id
+  uid: excel!Excel.Interfaces.ImageData#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    指定 image 对象的形状标识符。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 6314a5667abab7bb2082b3cd65b565fe59e1021a
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49152631"
