--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeviewcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeviewcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeViewCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`rangeViewCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.RangeViewCollectionData
-    fullName: Excel.Interfaces.RangeViewCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeViewCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.RangeViewCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.RangeViewData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeViewCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeViewCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.RangeViewData[]'
-    fullName: 'Excel.Interfaces.RangeViewData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.RangeViewData:interface'
-        name: Excel.Interfaces.RangeViewData
-        fullName: Excel.Interfaces.RangeViewData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.RangeViewCollectionData
+uid: excel!Excel.Interfaces.RangeViewCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeViewCollectionData
+summary: 描述通过调用返回的数据的接口 `rangeViewCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.RangeViewCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.RangeViewData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeViewData:interface" />[]
+metadata:
+  ms.openlocfilehash: a3dc5fa61d123dc0223fc36c2a4efcda8d8dc81c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49152400"
