--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.runtimeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.runtimeloadoptions.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RuntimeLoadOptions:interface'
-    summary: |-
-      表示 Excel 运行时类。
+### YamlMime:TSType
+name: Excel.Interfaces.RuntimeLoadOptions
+uid: excel!Excel.Interfaces.RuntimeLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.RuntimeLoadOptions
+summary: >-
+  表示 Excel 运行时类。
 
-      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.RuntimeLoadOptions
-    fullName: Excel.Interfaces.RuntimeLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RuntimeLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.RuntimeLoadOptions#enableEvents:member'
-  - uid: 'excel!Excel.Interfaces.RuntimeLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RuntimeLoadOptions#enableEvents:member'
-    summary: |-
-      切换当前任务窗格或内容加载项中的 JavaScript 事件。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: enableEvents
-    fullName: enableEvents
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enableEvents?: boolean;'
-      return:
-        type:
-          - boolean
+  \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.RuntimeLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: enableEvents
+  uid: excel!Excel.Interfaces.RuntimeLoadOptions#enableEvents:member
+  package: excel!
+  fullName: enableEvents
+  summary: >-
+    切换当前任务窗格或内容加载项中的 JavaScript 事件。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enableEvents?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 48bf58f799a50c303ff4cd1e583aecfc4af11818
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49152346"
