--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.iterativecalculation.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.iterativecalculation.yml
@@ -1,217 +1,197 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.IterativeCalculation:class'
-    summary: |-
-      表示迭代计算设置。
+### YamlMime:TSType
+name: Excel.IterativeCalculation
+uid: excel!Excel.IterativeCalculation:class
+package: excel!
+fullName: Excel.IterativeCalculation
+summary: >-
+  表示迭代计算设置。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.IterativeCalculation
-    fullName: Excel.IterativeCalculation
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.IterativeCalculation#context:member'
-      - 'excel!Excel.IterativeCalculation#enabled:member'
-      - 'excel!Excel.IterativeCalculation#load:member(1)'
-      - 'excel!Excel.IterativeCalculation#load:member(2)'
-      - 'excel!Excel.IterativeCalculation#load:member(3)'
-      - 'excel!Excel.IterativeCalculation#maxChange:member'
-      - 'excel!Excel.IterativeCalculation#maxIteration:member'
-      - 'excel!Excel.IterativeCalculation#set:member(1)'
-      - 'excel!Excel.IterativeCalculation#set:member(2)'
-      - 'excel!Excel.IterativeCalculation#toJSON:member(1)'
-  - uid: 'excel!Excel.IterativeCalculation#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.IterativeCalculation#enabled:member'
-    summary: |-
-      如果 Excel 使用迭代来处理循环引用，则为 True。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: enabled
-    fullName: enabled
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enabled: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.IterativeCalculation#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.IterativeCalculationLoadOptions): Excel.IterativeCalculation;'
-      return:
-        type:
-          - 'excel!Excel.IterativeCalculation:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
-  - uid: 'excel!Excel.IterativeCalculation#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.IterativeCalculation;'
-      return:
-        type:
-          - 'excel!Excel.IterativeCalculation:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.IterativeCalculation#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.IterativeCalculation#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: enabled
+  uid: excel!Excel.IterativeCalculation#enabled:member
+  package: excel!
+  fullName: enabled
+  summary: >-
+    如果 Excel 使用迭代来处理循环引用，则为 True。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enabled: boolean;'
+    return:
+      type: boolean
+- name: maxChange
+  uid: excel!Excel.IterativeCalculation#maxChange:member
+  package: excel!
+  fullName: maxChange
+  summary: >-
+    指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'maxChange: number;'
+    return:
+      type: number
+- name: maxIteration
+  uid: excel!Excel.IterativeCalculation#maxIteration:member
+  package: excel!
+  fullName: maxIteration
+  summary: >-
+    指定 Excel 可用于解析循环引用的最大迭代次数。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'maxIteration: number;'
+    return:
+      type: number
+methods:
+- name: load(options)
+  uid: excel!Excel.IterativeCalculation#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.IterativeCalculationLoadOptions): Excel.IterativeCalculation;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.IterativeCalculation:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.IterativeCalculation#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.IterativeCalculation;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.IterativeCalculation:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.IterativeCalculation#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.IterativeCalculation;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.IterativeCalculation;
-      return:
-        type:
-          - 'excel!Excel.IterativeCalculation:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.IterativeCalculation#maxChange:member'
-    summary: |-
-      指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
+                }
+    return:
+      type: <xref uid="excel!Excel.IterativeCalculation:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.IterativeCalculation#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: maxChange
-    fullName: maxChange
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'maxChange: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.IterativeCalculation#maxIteration:member'
-    summary: |-
-      指定 Excel 可用于解析循环引用的最大迭代次数。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: maxIteration
-    fullName: maxIteration
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'maxIteration: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.IterativeCalculation#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
-
-      `set(properties: Excel.IterativeCalculation): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.IterativeCalculationUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.IterativeCalculation#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.IterativeCalculation): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.IterativeCalculation:class'
-  - uid: 'excel!Excel.IterativeCalculation#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 IterativeCalculation 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.IterativeCalculationData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.IterativeCalculationData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.IterativeCalculationData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.IterativeCalculation:class'
-    name: Excel.IterativeCalculation
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
-    name: Excel.Interfaces.IterativeCalculationLoadOptions
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
-    name: Interfaces.IterativeCalculationUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.Interfaces.IterativeCalculationData:interface'
-    name: Excel.Interfaces.IterativeCalculationData
+    `set(properties: Excel.IterativeCalculation): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.IterativeCalculationUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.IterativeCalculationUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.IterativeCalculation#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.IterativeCalculation): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.IterativeCalculation:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.IterativeCalculation#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 IterativeCalculation 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.IterativeCalculationData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.IterativeCalculationData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.IterativeCalculationData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: b82f629f1388e5d11356900ea37f217d76d98465
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49152309"
