--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pivothierarchycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pivothierarchycollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`pivotHierarchyCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.PivotHierarchyCollectionData
-    fullName: Excel.Interfaces.PivotHierarchyCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotHierarchyCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.PivotHierarchyData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotHierarchyCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.PivotHierarchyData[]'
-    fullName: 'Excel.Interfaces.PivotHierarchyData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotHierarchyData:interface'
-        name: Excel.Interfaces.PivotHierarchyData
-        fullName: Excel.Interfaces.PivotHierarchyData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.PivotHierarchyCollectionData
+uid: excel!Excel.Interfaces.PivotHierarchyCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotHierarchyCollectionData
+summary: 描述通过调用返回的数据的接口 `pivotHierarchyCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.PivotHierarchyCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.PivotHierarchyData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotHierarchyData:interface" />[]
+metadata:
+  ms.openlocfilehash: ab7f85471052d6911d32b1985f871f7f18d05e55
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151916"
