--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.workbookprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.workbookprotectiondata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
-    summary: 描述通过调用返回的数据的接口`workbookProtection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.WorkbookProtectionData
-    fullName: Excel.Interfaces.WorkbookProtectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.WorkbookProtectionData#protected:member'
-  - uid: 'excel!Excel.Interfaces.WorkbookProtectionData#protected:member'
-    summary: |-
-      指定工作簿是否受保护。
+### YamlMime:TSType
+name: Excel.Interfaces.WorkbookProtectionData
+uid: excel!Excel.Interfaces.WorkbookProtectionData:interface
+package: excel!
+fullName: Excel.Interfaces.WorkbookProtectionData
+summary: 描述通过调用返回的数据的接口 `workbookProtection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: protected
+  uid: excel!Excel.Interfaces.WorkbookProtectionData#protected:member
+  package: excel!
+  fullName: protected
+  summary: >-
+    指定工作簿是否受保护。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: protected
-    fullName: protected
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'protected?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'protected?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 9251b8e13e1b6a6f90bec09ef2ce7071c536358c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151854"
