--- a/docs/docs-ref-autogen/excel_online/excel/excel.threetrafficlights1set.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.threetrafficlights1set.yml
@@ -1,50 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ThreeTrafficLights1Set:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ThreeTrafficLights1Set
-    fullName: Excel.ThreeTrafficLights1Set
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.ThreeTrafficLights1Set#greenCircle:member'
-      - 'excel!Excel.ThreeTrafficLights1Set#redCircleWithBorder:member'
-      - 'excel!Excel.ThreeTrafficLights1Set#yellowCircle:member'
-  - uid: 'excel!Excel.ThreeTrafficLights1Set#greenCircle:member'
-    name: greenCircle
-    fullName: greenCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'greenCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeTrafficLights1Set#redCircleWithBorder:member'
-    name: redCircleWithBorder
-    fullName: redCircleWithBorder
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'redCircleWithBorder: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeTrafficLights1Set#yellowCircle:member'
-    name: yellowCircle
-    fullName: yellowCircle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'yellowCircle: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.ThreeTrafficLights1Set
+uid: excel!Excel.ThreeTrafficLights1Set:interface
+package: excel!
+fullName: Excel.ThreeTrafficLights1Set
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: greenCircle
+  uid: excel!Excel.ThreeTrafficLights1Set#greenCircle:member
+  package: excel!
+  fullName: greenCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'greenCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: redCircleWithBorder
+  uid: excel!Excel.ThreeTrafficLights1Set#redCircleWithBorder:member
+  package: excel!
+  fullName: redCircleWithBorder
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'redCircleWithBorder: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: yellowCircle
+  uid: excel!Excel.ThreeTrafficLights1Set#yellowCircle:member
+  package: excel!
+  fullName: yellowCircle
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'yellowCircle: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: e451829e2d7829cb8a504e9610678c5590a33e0d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151567"
