--- a/docs/docs-ref-autogen/excel_online/excel/excel.worksheetcustompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.worksheetcustompropertycollection.yml
@@ -1,263 +1,195 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection:class'
-    summary: |-
-      包含工作表级别的自定义属性的集合。
-
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.WorksheetCustomPropertyCollection
-    fullName: Excel.WorksheetCustomPropertyCollection
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.WorksheetCustomPropertyCollection#add:member(1)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#context:member'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#getCount:member(1)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#getItem:member(1)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#getItemOrNullObject:member(1)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#items:member'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#load:member(1)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#load:member(2)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#load:member(3)'
-      - 'excel!Excel.WorksheetCustomPropertyCollection#toJSON:member(1)'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#add:member(1)'
-    summary: |-
-      添加映射到所提供的键的新自定义属性。 这将使用该密钥覆盖现有的自定义属性。
-
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: 'add(key, value)'
-    fullName: 'add(key, value)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'add(key: string, value: string): Excel.WorksheetCustomProperty;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomProperty:class'
-        description: |-
+### YamlMime:TSType
+name: Excel.WorksheetCustomPropertyCollection
+uid: excel!Excel.WorksheetCustomPropertyCollection:class
+package: excel!
+fullName: Excel.WorksheetCustomPropertyCollection
+summary: >-
+  包含工作表级别的自定义属性的集合。
 
 
-          #### <a name="examples"></a>示例
+  \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.WorksheetCustomPropertyCollection#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: items
+  uid: excel!Excel.WorksheetCustomPropertyCollection#items:member
+  package: excel!
+  fullName: items
+  summary: 获取此集合中已加载的子项。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly items: Excel.WorksheetCustomProperty[];'
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomProperty:class" />[]
+methods:
+- name: add(key, value)
+  uid: excel!Excel.WorksheetCustomPropertyCollection#add:member(1)
+  package: excel!
+  fullName: add(key, value)
+  summary: >-
+    添加映射到所提供的键的新自定义属性。 这将使用该密钥覆盖现有的自定义属性。
 
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/26-document/custom-properties.yaml
-          await Excel.run(async (context) => {
-            // Get the key/value pair from the task pane.
-            const userKey = $("#key").text();
-            const userValue = $("#value").text();
 
-            // Add the custom property.
-            const customWorksheetProperties = context.workbook.worksheets.getActiveWorksheet().customProperties;
-            customWorksheetProperties.add(userKey, userValue);
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'add(key: string, value: string): Excel.WorksheetCustomProperty;'
+    parameters:
+    - id: key
+      description: '标识自定义属性对象的键。 它不区分大小写。密钥限制为255个字符 (较大的值将导致引发 "InvalidArgument" 错误。 ) '
+      type: string
+    - id: value
+      description: 此自定义属性的值。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomProperty:class" />
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/26-document/custom-properties.yaml\nawait Excel.run(async (context) => {\n  // Get the key/value pair from the task pane.\n  const userKey = $(\"#key\").text();\n  const userValue = $(\"#value\").text();\n\n  // Add the custom property.\n  const customWorksheetProperties = context.workbook.worksheets.getActiveWorksheet().customProperties;\n  customWorksheetProperties.add(userKey, userValue);\n\n  await context.sync();\n\n  console.log(`Successfully set custom worksheet property ${userKey}:${userValue}.`);\n});\n```"
+- name: getCount()
+  uid: excel!Excel.WorksheetCustomPropertyCollection#getCount:member(1)
+  package: excel!
+  fullName: getCount()
+  summary: >-
+    获取此工作表上的自定义属性的数目。
 
-            await context.sync();
 
-            console.log(`Successfully set custom worksheet property ${userKey}:${userValue}.`);
-          });
-          ```
-      parameters:
-        - id: key
-          description: '标识自定义属性对象的键。 它不区分大小写。密钥限制为255个字符 (较大的值将导致引发 "InvalidArgument" 错误。 ) '
-          type:
-            - string
-        - id: value
-          description: 此自定义属性的值。
-          type:
-            - string
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#getCount:member(1)'
-    summary: |-
-      获取此工作表上的自定义属性的数目。
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getCount(): OfficeExtension.ClientResult<number>;'
+    return:
+      type: <xref uid="office!OfficeExtension.ClientResult:class" />&lt;number&gt;
+      description: ''
+- name: getItem(key)
+  uid: excel!Excel.WorksheetCustomPropertyCollection#getItem:member(1)
+  package: excel!
+  fullName: getItem(key)
+  summary: >-
+    按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则引发此异常。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getCount()
-    fullName: getCount()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getCount(): OfficeExtension.ClientResult<number>;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomPropertyCollection#getCount~0:complex'
-        description: ''
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#getItem:member(1)'
-    summary: |-
-      按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则引发此异常。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getItem(key)
-    fullName: getItem(key)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItem(key: string): Excel.WorksheetCustomProperty;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomProperty:class'
-        description: ''
-      parameters:
-        - id: key
-          description: 标识自定义属性对象的键。 它不区分大小写。
-          type:
-            - string
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#getItemOrNullObject:member(1)'
-    summary: |-
-      按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则返回 null 对象。
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItem(key: string): Excel.WorksheetCustomProperty;'
+    parameters:
+    - id: key
+      description: 标识自定义属性对象的键。 它不区分大小写。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomProperty:class" />
+      description: ''
+- name: getItemOrNullObject(key)
+  uid: excel!Excel.WorksheetCustomPropertyCollection#getItemOrNullObject:member(1)
+  package: excel!
+  fullName: getItemOrNullObject(key)
+  summary: >-
+    按键获取自定义属性对象（不区分大小写）。 如果自定义属性不存在，则返回 null 对象。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: getItemOrNullObject(key)
-    fullName: getItemOrNullObject(key)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'getItemOrNullObject(key: string): Excel.WorksheetCustomProperty;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomProperty:class'
-        description: ''
-      parameters:
-        - id: key
-          description: 标识自定义属性对象的键。 它不区分大小写。
-          type:
-            - string
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#items:member'
-    summary: 获取此集合中已加载的子项。
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly items: Excel.WorksheetCustomProperty[];'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomPropertyCollection#items~0:complex'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.WorksheetCustomPropertyCollection;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomPropertyCollection:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.WorksheetCustomPropertyCollection#load~0:complex'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.WorksheetCustomPropertyCollection;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomPropertyCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.WorksheetCustomPropertyCollection;'
-      return:
-        type:
-          - 'excel!Excel.WorksheetCustomPropertyCollection:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - 'office!OfficeExtension.LoadOption:interface'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.WorksheetCustomPropertyCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.WorksheetCustomPropertyCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.WorksheetCustomPropertyCollectionData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.WorksheetCustomProperty:class'
-    name: Excel.WorksheetCustomProperty
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#getCount~0:complex'
-    name: OfficeExtension.ClientResult<number>
-    fullName: OfficeExtension.ClientResult<number>
-    spec.typeScript:
-      - uid: 'office!OfficeExtension.ClientResult:class'
-        name: OfficeExtension.ClientResult
-        fullName: OfficeExtension.ClientResult
-      - name: <number>
-        fullName: <number>
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#items~0:complex'
-    name: 'Excel.WorksheetCustomProperty[]'
-    fullName: 'Excel.WorksheetCustomProperty[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.WorksheetCustomProperty:class'
-        name: Excel.WorksheetCustomProperty
-        fullName: Excel.WorksheetCustomProperty
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection:class'
-    name: Excel.WorksheetCustomPropertyCollection
-  - uid: 'excel!Excel.WorksheetCustomPropertyCollection#load~0:complex'
-    name: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-    fullName: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions:interface'
-        name: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions
-        fullName: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions
-      - name: ' & '
-        fullName: ' & '
-      - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
-        name: Excel.Interfaces.CollectionLoadOptions
-        fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'office!OfficeExtension.LoadOption:interface'
-    name: OfficeExtension.LoadOption
-  - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionData:interface'
-    name: Excel.Interfaces.WorksheetCustomPropertyCollectionData
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'getItemOrNullObject(key: string): Excel.WorksheetCustomProperty;'
+    parameters:
+    - id: key
+      description: 标识自定义属性对象的键。 它不区分大小写。
+      type: string
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomProperty:class" />
+      description: ''
+- name: load(options)
+  uid: excel!Excel.WorksheetCustomPropertyCollection#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.WorksheetCustomPropertyCollection;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions:interface" /> & <xref uid="excel!Excel.Interfaces.CollectionLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomPropertyCollection:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.WorksheetCustomPropertyCollection#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.WorksheetCustomPropertyCollection;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomPropertyCollection:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.WorksheetCustomPropertyCollection#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.WorksheetCustomPropertyCollection;'
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: <xref uid="office!OfficeExtension.LoadOption:interface" />
+    return:
+      type: <xref uid="excel!Excel.WorksheetCustomPropertyCollection:class" />
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.WorksheetCustomPropertyCollection#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.WorksheetCustomPropertyCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.WorksheetCustomPropertyCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.WorksheetCustomPropertyCollectionData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.WorksheetCustomPropertyCollectionData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: a3c8091f9df9a55a62920105efe6a346ea9f94f4
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49151532"
