commit translated contents

--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.commentdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.CommentData:interface'
-    summary: 描述通过调用返回的数据的接口`comment.toJSON()`<!-- -->.
-    name: Excel.Interfaces.CommentData
-    fullName: Excel.Interfaces.CommentData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.CommentData
+uid: excel!Excel.Interfaces.CommentData:interface
+package: excel!
+fullName: Excel.Interfaces.CommentData
+summary: 描述通过调用返回的数据的接口 `comment.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 70b71eb1c99d22ea4546e9c84dcceacd3f1cec6f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49155256"
