--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
-    summary: '一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口，可用于`conditionalDataBarNegativeFormat.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
-    fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
+uid: excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
+summary: 一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口，可用于 `conditionalDataBarNegativeFormat.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 7e5644a3890a4b912d9704da8f66ae4b260aa16f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49155165"
