--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.threearrowsset.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.threearrowsset.yml
@@ -1,50 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ThreeArrowsSet:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ThreeArrowsSet
-    fullName: Excel.ThreeArrowsSet
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.ThreeArrowsSet#greenUpArrow:member'
-      - 'excel!Excel.ThreeArrowsSet#redDownArrow:member'
-      - 'excel!Excel.ThreeArrowsSet#yellowSideArrow:member'
-  - uid: 'excel!Excel.ThreeArrowsSet#greenUpArrow:member'
-    name: greenUpArrow
-    fullName: greenUpArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'greenUpArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeArrowsSet#redDownArrow:member'
-    name: redDownArrow
-    fullName: redDownArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'redDownArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeArrowsSet#yellowSideArrow:member'
-    name: yellowSideArrow
-    fullName: yellowSideArrow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'yellowSideArrow: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.ThreeArrowsSet
+uid: excel!Excel.ThreeArrowsSet:interface
+package: excel!
+fullName: Excel.ThreeArrowsSet
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: greenUpArrow
+  uid: excel!Excel.ThreeArrowsSet#greenUpArrow:member
+  package: excel!
+  fullName: greenUpArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'greenUpArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: redDownArrow
+  uid: excel!Excel.ThreeArrowsSet#redDownArrow:member
+  package: excel!
+  fullName: redDownArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'redDownArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: yellowSideArrow
+  uid: excel!Excel.ThreeArrowsSet#yellowSideArrow:member
+  package: excel!
+  fullName: yellowSideArrow
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'yellowSideArrow: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: b63affa201f79fcaa3725e30b6ab3fadfdbc1288
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49154654"
