--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlinedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlinedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineData:interface'
-    summary: 描述通过调用返回的数据的接口`chartTrendline.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartTrendlineData
-    fullName: Excel.Interfaces.ChartTrendlineData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartTrendlineData
+uid: excel!Excel.Interfaces.ChartTrendlineData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartTrendlineData
+summary: 描述通过调用返回的数据的接口 `chartTrendline.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 238d2d7c48e127310b8f7d63bd4477e3f1073365
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49155431"
