--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlineformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.charttrendlineformatupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
-    summary: '一个用于更新 ChartTrendlineFormat 对象上的数据的接口，可用于`chartTrendlineFormat.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartTrendlineFormatUpdateData
-    fullName: Excel.Interfaces.ChartTrendlineFormatUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartTrendlineFormatUpdateData
+uid: excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartTrendlineFormatUpdateData
+summary: 一个用于更新 ChartTrendlineFormat 对象上的数据的接口，可用于 `chartTrendlineFormat.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 6d209093d1b589e11e37cb75aa831d48b2f32742
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49155396"
