--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.bindingselectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.bindingselectionchangedeventargs.yml
@@ -1,99 +1,105 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.BindingSelectionChangedEventArgs:interface'
-    summary: |-
-      提供有关引发 "SelectionChanged" 事件的选定内容的信息。
+### YamlMime:TSType
+name: Excel.BindingSelectionChangedEventArgs
+uid: excel!Excel.BindingSelectionChangedEventArgs:interface
+package: excel!
+fullName: Excel.BindingSelectionChangedEventArgs
+summary: >-
+  提供有关引发 "SelectionChanged" 事件的选定内容的信息。
 
-      * 注意 * *：如果选定多个不连续的单元格，则 `Binding.onSelectionChanged` 仅报告一个选定内容的行和列信息。 用于 `Worksheet.onSelectionChanged` 多个选定区域。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.BindingSelectionChangedEventArgs
-    fullName: Excel.BindingSelectionChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.BindingSelectionChangedEventArgs#binding:member'
-      - 'excel!Excel.BindingSelectionChangedEventArgs#columnCount:member'
-      - 'excel!Excel.BindingSelectionChangedEventArgs#rowCount:member'
-      - 'excel!Excel.BindingSelectionChangedEventArgs#startColumn:member'
-      - 'excel!Excel.BindingSelectionChangedEventArgs#startRow:member'
-  - uid: 'excel!Excel.BindingSelectionChangedEventArgs#binding:member'
-    summary: |-
-      获取一个临时 `Binding` 对象，该对象包含 `Binding` 引发事件的对象的 ID。 使用该 ID `BindingCollection.getItem(id)` 可获取绑定。
+  * 注意 * *：如果选定多个不连续的单元格，则 `Binding.onSelectionChanged` 仅报告一个选定内容的行和列信息。 用于 `Worksheet.onSelectionChanged` 多个选定区域。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: binding
-    fullName: binding
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'binding: Excel.Binding;'
-      return:
-        type:
-          - 'excel!Excel.Binding:class'
-  - uid: 'excel!Excel.BindingSelectionChangedEventArgs#columnCount:member'
-    summary: |-
-      获取选择的列数。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columnCount
-    fullName: columnCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnCount: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.BindingSelectionChangedEventArgs#rowCount:member'
-    summary: |-
-      获取选择的行数。
+  \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: binding
+  uid: excel!Excel.BindingSelectionChangedEventArgs#binding:member
+  package: excel!
+  fullName: binding
+  summary: >-
+    获取一个临时 `Binding` 对象，该对象包含 `Binding` 引发事件的对象的 ID。 使用该 ID `BindingCollection.getItem(id)` 可获取绑定。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rowCount
-    fullName: rowCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowCount: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.BindingSelectionChangedEventArgs#startColumn:member'
-    summary: |-
-      获取所选内容第一列的索引（从零开始）。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: startColumn
-    fullName: startColumn
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'startColumn: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.BindingSelectionChangedEventArgs#startRow:member'
-    summary: |-
-      获取选择的第一行的索引（基于零）。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'binding: Excel.Binding;'
+    return:
+      type: <xref uid="excel!Excel.Binding:class" />
+- name: columnCount
+  uid: excel!Excel.BindingSelectionChangedEventArgs#columnCount:member
+  package: excel!
+  fullName: columnCount
+  summary: >-
+    获取选择的列数。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: startRow
-    fullName: startRow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'startRow: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'excel!Excel.Binding:class'
-    name: Excel.Binding
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnCount: number;'
+    return:
+      type: number
+- name: rowCount
+  uid: excel!Excel.BindingSelectionChangedEventArgs#rowCount:member
+  package: excel!
+  fullName: rowCount
+  summary: >-
+    获取选择的行数。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowCount: number;'
+    return:
+      type: number
+- name: startColumn
+  uid: excel!Excel.BindingSelectionChangedEventArgs#startColumn:member
+  package: excel!
+  fullName: startColumn
+  summary: >-
+    获取所选内容第一列的索引（从零开始）。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'startColumn: number;'
+    return:
+      type: number
+- name: startRow
+  uid: excel!Excel.BindingSelectionChangedEventArgs#startRow:member
+  package: excel!
+  fullName: startRow
+  summary: >-
+    获取选择的第一行的索引（基于零）。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'startRow: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 53cd3fbad6e5cfce8c63c6d709d6296299412e14
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49154612"
