commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.chartaxisscaletype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartaxisscaletype.yml
@@ -1,27 +1,25 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartAxisScaleType:enum'
-    summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ChartAxisScaleType
-    fullName: Excel.ChartAxisScaleType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartAxisScaleType.linear:member'
-      - 'excel!Excel.ChartAxisScaleType.logarithmic:member'
-  - uid: 'excel!Excel.ChartAxisScaleType.linear:member'
-    name: linear
-    fullName: linear
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Linear"'
-  - uid: 'excel!Excel.ChartAxisScaleType.logarithmic:member'
-    name: logarithmic
-    fullName: logarithmic
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Logarithmic"'
+### YamlMime:TSEnum
+name: Excel.ChartAxisScaleType
+uid: excel!Excel.ChartAxisScaleType:enum
+package: excel!
+fullName: Excel.ChartAxisScaleType
+summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: linear
+  uid: excel!Excel.ChartAxisScaleType.linear:member
+  package: excel!
+  summary: ''
+- name: logarithmic
+  uid: excel!Excel.ChartAxisScaleType.logarithmic:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: c5303ad1be188380ab3caabe5763c0f161f04b40
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49170075"
