--- a/docs/docs-ref-autogen/excel/excel/excel.chartaxistype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartaxistype.yml
@@ -1,46 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartAxisType:enum'
-    summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ChartAxisType
-    fullName: Excel.ChartAxisType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartAxisType.category:member'
-      - 'excel!Excel.ChartAxisType.invalid:member'
-      - 'excel!Excel.ChartAxisType.series:member'
-      - 'excel!Excel.ChartAxisType.value:member'
-  - uid: 'excel!Excel.ChartAxisType.category:member'
-    summary: 坐标轴显示类别。
-    name: category
-    fullName: category
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Category"'
-  - uid: 'excel!Excel.ChartAxisType.invalid:member'
-    name: invalid
-    fullName: invalid
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Invalid"'
-  - uid: 'excel!Excel.ChartAxisType.series:member'
-    summary: 坐标轴显示数据系列。
-    name: series
-    fullName: series
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Series"'
-  - uid: 'excel!Excel.ChartAxisType.value:member'
-    summary: 坐标轴显示值。
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Value"'
+### YamlMime:TSEnum
+name: Excel.ChartAxisType
+uid: excel!Excel.ChartAxisType:enum
+package: excel!
+fullName: Excel.ChartAxisType
+summary: '\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: category
+  uid: excel!Excel.ChartAxisType.category:member
+  package: excel!
+  summary: 坐标轴显示类别。
+- name: invalid
+  uid: excel!Excel.ChartAxisType.invalid:member
+  package: excel!
+  summary: ''
+- name: series
+  uid: excel!Excel.ChartAxisType.series:member
+  package: excel!
+  summary: 坐标轴显示数据系列。
+- name: value
+  uid: excel!Excel.ChartAxisType.value:member
+  package: excel!
+  summary: 坐标轴显示值。
+metadata:
+  ms.openlocfilehash: f1636981e490b8bdf324aeb28d8f08bacd27f8c4
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49169991"
