--- a/docs/docs-ref-autogen/excel/excel/excel.charterrorbarstype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.charterrorbarstype.yml
@@ -1,54 +1,41 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartErrorBarsType:enum'
-    summary: |-
-      代表误差线的范围类型。
+### YamlMime:TSEnum
+name: Excel.ChartErrorBarsType
+uid: excel!Excel.ChartErrorBarsType:enum
+package: excel!
+fullName: Excel.ChartErrorBarsType
+summary: >-
+  代表误差线的范围类型。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartErrorBarsType
-    fullName: Excel.ChartErrorBarsType
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartErrorBarsType.custom:member'
-      - 'excel!Excel.ChartErrorBarsType.fixedValue:member'
-      - 'excel!Excel.ChartErrorBarsType.percent:member'
-      - 'excel!Excel.ChartErrorBarsType.stDev:member'
-      - 'excel!Excel.ChartErrorBarsType.stError:member'
-  - uid: 'excel!Excel.ChartErrorBarsType.custom:member'
-    name: custom
-    fullName: custom
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Custom"'
-  - uid: 'excel!Excel.ChartErrorBarsType.fixedValue:member'
-    name: fixedValue
-    fullName: fixedValue
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"FixedValue"'
-  - uid: 'excel!Excel.ChartErrorBarsType.percent:member'
-    name: percent
-    fullName: percent
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Percent"'
-  - uid: 'excel!Excel.ChartErrorBarsType.stDev:member'
-    name: stDev
-    fullName: stDev
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"StDev"'
-  - uid: 'excel!Excel.ChartErrorBarsType.stError:member'
-    name: stError
-    fullName: stError
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"StError"'
+
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: custom
+  uid: excel!Excel.ChartErrorBarsType.custom:member
+  package: excel!
+  summary: ''
+- name: fixedValue
+  uid: excel!Excel.ChartErrorBarsType.fixedValue:member
+  package: excel!
+  summary: ''
+- name: percent
+  uid: excel!Excel.ChartErrorBarsType.percent:member
+  package: excel!
+  summary: ''
+- name: stDev
+  uid: excel!Excel.ChartErrorBarsType.stDev:member
+  package: excel!
+  summary: ''
+- name: stError
+  uid: excel!Excel.ChartErrorBarsType.stError:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 833a0b819fbcf7ce33b64f976e0ea5cc29aa0267
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49169739"
