commit translated contents

--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.functionresultloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.functionresultloadoptions.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions:interface'
-    summary: |-
-      包含函数求值操作的结果的对象
+### YamlMime:TSType
+name: Excel.Interfaces.FunctionResultLoadOptions
+uid: excel!Excel.Interfaces.FunctionResultLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.FunctionResultLoadOptions
+summary: >-
+  包含函数求值操作的结果的对象
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.FunctionResultLoadOptions
-    fullName: Excel.Interfaces.FunctionResultLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.FunctionResultLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.FunctionResultLoadOptions#error:member'
-      - 'excel!Excel.Interfaces.FunctionResultLoadOptions#value:member'
-  - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions#error:member'
-    summary: |-
-      表示错误的错误值（如 " \# DIV/0"）。 如果未设置错误字符串，则函数成功，并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: error
-    fullName: error
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'error?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.FunctionResultLoadOptions#value:member'
-    summary: |-
-      函数计算的值。 仅当未发生错误（即，未设置 Error 属性）时，才会填充 "值" 字段。
+  \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.FunctionResultLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: error
+  uid: excel!Excel.Interfaces.FunctionResultLoadOptions#error:member
+  package: excel!
+  fullName: error
+  summary: >-
+    错误值 (，如 " \# DIV/0" ) 表示错误。 如果未设置错误字符串，则函数成功，并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'error?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: excel!Excel.Interfaces.FunctionResultLoadOptions#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    函数计算的值。 仅当未发生错误时，才会填充 "值" 字段 (即，不) 设置 Error 属性。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: d95dc473498aef4000b79182c102a26e75b71f14
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49172735"
