--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.geometricshapedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.geometricshapedata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.GeometricShapeData:interface'
-    summary: 描述通过调用返回的数据的接口`geometricShape.toJSON()`<!-- -->.
-    name: Excel.Interfaces.GeometricShapeData
-    fullName: Excel.Interfaces.GeometricShapeData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.GeometricShapeData#id:member'
-  - uid: 'excel!Excel.Interfaces.GeometricShapeData#id:member'
-    summary: |-
-      返回形状标识符。
+### YamlMime:TSType
+name: Excel.Interfaces.GeometricShapeData
+uid: excel!Excel.Interfaces.GeometricShapeData:interface
+package: excel!
+fullName: Excel.Interfaces.GeometricShapeData
+summary: 描述通过调用返回的数据的接口 `geometricShape.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: excel!Excel.Interfaces.GeometricShapeData#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    返回形状标识符。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: a5ddb89c122edd6731a85ea89c81377a12193d4f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49172714"
