--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.headerfootergroupdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.headerfootergroupdata.yml
@@ -1,135 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData:interface'
-    summary: 描述通过调用返回的数据的接口`headerFooterGroup.toJSON()`<!-- -->.
-    name: Excel.Interfaces.HeaderFooterGroupData
-    fullName: Excel.Interfaces.HeaderFooterGroupData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#defaultForAllPages:member'
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#evenPages:member'
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#firstPage:member'
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#oddPages:member'
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#state:member'
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetMargins:member'
-      - 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetScale:member'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#defaultForAllPages:member'
-    summary: |-
-      常规页眉/页脚，除非指定偶数页/奇数页或首页，否则适用于所有页面，
+### YamlMime:TSType
+name: Excel.Interfaces.HeaderFooterGroupData
+uid: excel!Excel.Interfaces.HeaderFooterGroupData:interface
+package: excel!
+fullName: Excel.Interfaces.HeaderFooterGroupData
+summary: 描述通过调用返回的数据的接口 `headerFooterGroup.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: defaultForAllPages
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#defaultForAllPages:member
+  package: excel!
+  fullName: defaultForAllPages
+  summary: >-
+    常规页眉/页脚，除非指定偶数页/奇数页或首页，否则适用于所有页面，
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: defaultForAllPages
-    fullName: defaultForAllPages
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'defaultForAllPages?: Excel.Interfaces.HeaderFooterData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.HeaderFooterData:interface'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#evenPages:member'
-    summary: |-
-      用于偶数页的页眉/页脚，需要为奇数页指定奇数页页眉/页脚。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: evenPages
-    fullName: evenPages
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'evenPages?: Excel.Interfaces.HeaderFooterData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.HeaderFooterData:interface'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#firstPage:member'
-    summary: |-
-      首页的页眉/页脚，为所有其他页使用常规或偶数页/奇数页页眉/页脚。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'defaultForAllPages?: Excel.Interfaces.HeaderFooterData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.HeaderFooterData:interface" />
+- name: evenPages
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#evenPages:member
+  package: excel!
+  fullName: evenPages
+  summary: >-
+    用于偶数页的页眉/页脚，需要为奇数页指定奇数页页眉/页脚。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: firstPage
-    fullName: firstPage
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'firstPage?: Excel.Interfaces.HeaderFooterData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.HeaderFooterData:interface'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#oddPages:member'
-    summary: |-
-      用于奇数页的页眉/页脚，需要为偶数页指定偶数页页眉/页脚。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: oddPages
-    fullName: oddPages
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'oddPages?: Excel.Interfaces.HeaderFooterData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.HeaderFooterData:interface'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#state:member'
-    summary: |-
-      页眉/页脚的设置状态。 有关详细信息，请参阅 Excel.HeaderFooterState。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'evenPages?: Excel.Interfaces.HeaderFooterData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.HeaderFooterData:interface" />
+- name: firstPage
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#firstPage:member
+  package: excel!
+  fullName: firstPage
+  summary: >-
+    首页的页眉/页脚，为所有其他页使用常规或偶数页/奇数页页眉/页脚。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: state
-    fullName: state
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'state?: Excel.HeaderFooterState | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.HeaderFooterGroupData#state~0:complex'
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetMargins:member'
-    summary: |-
-      获取或设置一个标记，指示页眉/页脚是否与工作表的页面布局选项中设置的页边距对齐。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: useSheetMargins
-    fullName: useSheetMargins
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'useSheetMargins?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#useSheetScale:member'
-    summary: |-
-      获取或设置一个标记，指示是否应按照工作表的页面布局选项中设置的页面缩放百分比来缩放页眉/页脚。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'firstPage?: Excel.Interfaces.HeaderFooterData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.HeaderFooterData:interface" />
+- name: oddPages
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#oddPages:member
+  package: excel!
+  fullName: oddPages
+  summary: >-
+    用于奇数页的页眉/页脚，需要为偶数页指定偶数页页眉/页脚。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: useSheetScale
-    fullName: useSheetScale
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'useSheetScale?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.HeaderFooterData:interface'
-    name: Excel.Interfaces.HeaderFooterData
-  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupData#state~0:complex'
-    name: Excel.HeaderFooterState | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven"
-    fullName: Excel.HeaderFooterState | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven"
-    spec.typeScript:
-      - uid: 'excel!Excel.HeaderFooterState:enum'
-        name: Excel.HeaderFooterState
-        fullName: Excel.HeaderFooterState
-      - name: ' | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven"'
-        fullName: ' | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven"'
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'oddPages?: Excel.Interfaces.HeaderFooterData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.HeaderFooterData:interface" />
+- name: state
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#state:member
+  package: excel!
+  fullName: state
+  summary: >-
+    页眉/页脚的设置状态。 有关详细信息，请参阅 Excel.HeaderFooterState。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'state?: Excel.HeaderFooterState | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven";'
+    return:
+      type: <xref uid="excel!Excel.HeaderFooterState:enum" /> | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven"
+- name: useSheetMargins
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#useSheetMargins:member
+  package: excel!
+  fullName: useSheetMargins
+  summary: >-
+    获取或设置一个标记，指示页眉/页脚是否与工作表的页面布局选项中设置的页边距对齐。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'useSheetMargins?: boolean;'
+    return:
+      type: boolean
+- name: useSheetScale
+  uid: excel!Excel.Interfaces.HeaderFooterGroupData#useSheetScale:member
+  package: excel!
+  fullName: useSheetScale
+  summary: >-
+    获取或设置一个标记，指示是否应按照工作表的页面布局选项中设置的页面缩放百分比来缩放页眉/页脚。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'useSheetScale?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 9bf8aaf08432e3e8b812fe58066eb033b232f39d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49172658"
