--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.tablecolumncollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.tablecolumncollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.TableColumnCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`tableColumnCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.TableColumnCollectionData
-    fullName: Excel.Interfaces.TableColumnCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.TableColumnCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.TableColumnCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.TableColumnData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.TableColumnCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.TableColumnCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.TableColumnData[]'
-    fullName: 'Excel.Interfaces.TableColumnData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.TableColumnData:interface'
-        name: Excel.Interfaces.TableColumnData
-        fullName: Excel.Interfaces.TableColumnData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.TableColumnCollectionData
+uid: excel!Excel.Interfaces.TableColumnCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.TableColumnCollectionData
+summary: 描述通过调用返回的数据的接口 `tableColumnCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.TableColumnCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.TableColumnData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.TableColumnData:interface" />[]
+metadata:
+  ms.openlocfilehash: d8728ad0242f99b53f2bc4609a1681092b24a909
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49172336"
