--- a/docs/docs-ref-autogen/excel_online/excel/excel.printcomments.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.printcomments.yml
@@ -1,38 +1,29 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.PrintComments:enum'
-    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.PrintComments
-    fullName: Excel.PrintComments
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.PrintComments.endSheet:member'
-      - 'excel!Excel.PrintComments.inPlace:member'
-      - 'excel!Excel.PrintComments.noComments:member'
-  - uid: 'excel!Excel.PrintComments.endSheet:member'
-    summary: 批注打印为工作表末尾的尾注。
-    name: endSheet
-    fullName: endSheet
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"EndSheet"'
-  - uid: 'excel!Excel.PrintComments.inPlace:member'
-    summary: 批注打印在其插入工作表的位置。
-    name: inPlace
-    fullName: inPlace
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"InPlace"'
-  - uid: 'excel!Excel.PrintComments.noComments:member'
-    summary: 将不打印批注。
-    name: noComments
-    fullName: noComments
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"NoComments"'
+### YamlMime:TSEnum
+name: Excel.PrintComments
+uid: excel!Excel.PrintComments:enum
+package: excel!
+fullName: Excel.PrintComments
+summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: endSheet
+  uid: excel!Excel.PrintComments.endSheet:member
+  package: excel!
+  summary: 批注打印为工作表末尾的尾注。
+- name: inPlace
+  uid: excel!Excel.PrintComments.inPlace:member
+  package: excel!
+  summary: 批注打印在其插入工作表的位置。
+- name: noComments
+  uid: excel!Excel.PrintComments.noComments:member
+  package: excel!
+  summary: 将不打印批注。
+metadata:
+  ms.openlocfilehash: 8af876bb19f0d5e886c46ec63d24480428e08bcd
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49172140"
