commit translated contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeborderloadoptions.yml
@@ -1,107 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions:interface'
-    summary: |-
-      代表对象的边框。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeBorderLoadOptions
+uid: excel!Excel.Interfaces.RangeBorderLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.RangeBorderLoadOptions
+summary: >-
+  代表对象的边框。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.RangeBorderLoadOptions
-    fullName: Excel.Interfaces.RangeBorderLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeBorderLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.RangeBorderLoadOptions#color:member'
-      - 'excel!Excel.Interfaces.RangeBorderLoadOptions#sideIndex:member'
-      - 'excel!Excel.Interfaces.RangeBorderLoadOptions#style:member'
-      - 'excel!Excel.Interfaces.RangeBorderLoadOptions#tintAndShade:member'
-      - 'excel!Excel.Interfaces.RangeBorderLoadOptions#weight:member'
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#color:member'
-    summary: |-
-      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#sideIndex:member'
-    summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.RangeBorderLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: color
+  uid: excel!Excel.Interfaces.RangeBorderLoadOptions#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    代表 RRGGBB 格式的边框线颜色的 HTML 颜色代码 \# (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: sideIndex
-    fullName: sideIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sideIndex?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#style:member'
-    summary: |-
-      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#tintAndShade:member'
-    summary: |-
-      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: boolean;'
+    return:
+      type: boolean
+- name: sideIndex
+  uid: excel!Excel.Interfaces.RangeBorderLoadOptions#sideIndex:member
+  package: excel!
+  fullName: sideIndex
+  summary: >-
+    指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tintAndShade
-    fullName: tintAndShade
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tintAndShade?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#weight:member'
-    summary: |-
-      指定区域周围的边框的粗细。 有关详细信息，请参阅 BorderWeight。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: weight
-    fullName: weight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'weight?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sideIndex?: boolean;'
+    return:
+      type: boolean
+- name: style
+  uid: excel!Excel.Interfaces.RangeBorderLoadOptions#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: boolean;'
+    return:
+      type: boolean
+- name: tintAndShade
+  uid: excel!Excel.Interfaces.RangeBorderLoadOptions#tintAndShade:member
+  package: excel!
+  fullName: tintAndShade
+  summary: >-
+    指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 (最暗) 和 1 (最明亮的) ，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tintAndShade?: boolean;'
+    return:
+      type: boolean
+- name: weight
+  uid: excel!Excel.Interfaces.RangeBorderLoadOptions#weight:member
+  package: excel!
+  fullName: weight
+  summary: >-
+    指定区域周围的边框的粗细。 有关详细信息，请参阅 BorderWeight。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'weight?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: a7637f79915d80f130ba9ebe98a8b3f880dc0525
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49185111"
