--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.custompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.custompropertycollectionloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions:interface'
-    summary: |-
-      包含 customProperty 对象的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.CustomPropertyCollectionLoadOptions
+uid: excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.CustomPropertyCollectionLoadOptions
+summary: >-
+  包含 customProperty 对象的集合。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.CustomPropertyCollectionLoadOptions
-    fullName: Excel.Interfaces.CustomPropertyCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
-      - 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
-      - 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
-  - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
-    summary: |-
-      对于集合中的每一项：自定义属性的键。 密钥限制为在 web 上的 Excel 之外的255个字符（较大的密钥会自动修整到其他平台上的255个字符）。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: key
-    fullName: key
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'key?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
-    summary: |-
-      对于集合中的每一项：用于自定义属性的值的类型。
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: key
+  uid: excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#key:member
+  package: excel!
+  fullName: key
+  summary: >-
+    对于集合中的每一项：自定义属性的键。 密钥限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符进行修整 (较长的字符) 。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
-    summary: |-
-      对于集合中的每一项：自定义属性的值。 该值限制为在 web 上的 Excel 之外的255个字符（更大的值会自动修整为其他平台上的255个字符）。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'key?: boolean;'
+    return:
+      type: boolean
+- name: type
+  uid: excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    对于集合中的每一项：用于自定义属性的值的类型。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    对于集合中的每一项：自定义属性的值。 该值限制为在 web 上的 Excel 之外的255个字符。在其他平台上，将自动对其他平台上的255个字符 (较大值进行修整) 。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 9030a5f51350d7c565c6cee10c4e9a720599e9ec
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49185384"
