--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotfieldupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotfieldupdatedata.yml
@@ -1,62 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData:interface'
-    summary: '一个用于更新透视字段对象上的数据的接口，可用于`pivotField.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotFieldUpdateData
-    fullName: Excel.Interfaces.PivotFieldUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotFieldUpdateData#name:member'
-      - 'excel!Excel.Interfaces.PivotFieldUpdateData#showAllItems:member'
-      - 'excel!Excel.Interfaces.PivotFieldUpdateData#subtotals:member'
-  - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData#name:member'
-    summary: |-
-      PivotField 的名称。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotFieldUpdateData
+uid: excel!Excel.Interfaces.PivotFieldUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotFieldUpdateData
+summary: 一个用于更新透视字段对象上的数据的接口，可用于 `pivotField.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: name
+  uid: excel!Excel.Interfaces.PivotFieldUpdateData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    PivotField 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData#showAllItems:member'
-    summary: |-
-      确定是否显示 PivotField 的所有项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showAllItems
-    fullName: showAllItems
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showAllItems?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData#subtotals:member'
-    summary: |-
-      PivotField 小计。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: showAllItems
+  uid: excel!Excel.Interfaces.PivotFieldUpdateData#showAllItems:member
+  package: excel!
+  fullName: showAllItems
+  summary: >-
+    确定是否显示 PivotField 的所有项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: subtotals
-    fullName: subtotals
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'subtotals?: Excel.Subtotals;'
-      return:
-        type:
-          - 'excel!Excel.Subtotals:interface'
-references:
-  - uid: 'excel!Excel.Subtotals:interface'
-    name: Excel.Subtotals
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showAllItems?: boolean;'
+    return:
+      type: boolean
+- name: subtotals
+  uid: excel!Excel.Interfaces.PivotFieldUpdateData#subtotals:member
+  package: excel!
+  fullName: subtotals
+  summary: >-
+    PivotField 小计。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'subtotals?: Excel.Subtotals;'
+    return:
+      type: <xref uid="excel!Excel.Subtotals:interface" />
+metadata:
+  ms.openlocfilehash: defe2a849bed34c951eb924c9dd5f4a43a7d9497
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49185230"
