--- a/docs/docs-ref-autogen/excel_online/excel/excel.charttrendlineformat.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.charttrendlineformat.yml
@@ -1,226 +1,166 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartTrendlineFormat:class'
-    summary: |-
-      代表图表趋势线的格式属性。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartTrendlineFormat
-    fullName: Excel.ChartTrendlineFormat
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.ChartTrendlineFormat#context:member'
-      - 'excel!Excel.ChartTrendlineFormat#line:member'
-      - 'excel!Excel.ChartTrendlineFormat#load:member(1)'
-      - 'excel!Excel.ChartTrendlineFormat#load:member(2)'
-      - 'excel!Excel.ChartTrendlineFormat#load:member(3)'
-      - 'excel!Excel.ChartTrendlineFormat#set:member(1)'
-      - 'excel!Excel.ChartTrendlineFormat#set:member(2)'
-      - 'excel!Excel.ChartTrendlineFormat#toJSON:member(1)'
-  - uid: 'excel!Excel.ChartTrendlineFormat#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ChartTrendlineFormat#line:member'
-    summary: |-
-      表示图表线条格式。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: line
-    fullName: line
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly line: Excel.ChartLineFormat;'
-      return:
-        type:
-          - 'excel!Excel.ChartLineFormat:class'
-        description: |-
+### YamlMime:TSType
+name: Excel.ChartTrendlineFormat
+uid: excel!Excel.ChartTrendlineFormat:class
+package: excel!
+fullName: Excel.ChartTrendlineFormat
+summary: >-
+  代表图表趋势线的格式属性。
 
 
-          #### <a name="examples"></a>示例
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.ChartTrendlineFormat#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: line
+  uid: excel!Excel.ChartTrendlineFormat#line:member
+  package: excel!
+  fullName: line
+  summary: >-
+    表示图表线条格式。
 
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/10-chart/chart-trendlines.yaml
-          await Excel.run(async (context) => {
-              const sheet = context.workbook.worksheets.getItem("Sample");
 
-              let seriesCollection = sheet.charts.getItemAt(0).series; 
-
-              // Get the color of the chart trendline. 
-              let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);
-              let line = trendline.format.line;
-              line.load("color");
-
-              await context.sync();
-
-              console.log("The trendline color is:" + line.color);
-          });
-          ```
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/10-chart/chart-trendlines.yaml
-          await Excel.run(async (context) => {
-              const sheet = context.workbook.worksheets.getItem("Sample");
-
-              let seriesCollection = sheet.charts.getItemAt(0).series; 
-              let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);
-
-              // Set format of the trendline to a solid, red line.
-              let line = trendline.format.line;
-              line.color = '#FF0000';
-
-              await context.sync();
-
-              console.log("The trendline color has been set to:" + line.color);
-          });
-          ```
-  - uid: 'excel!Excel.ChartTrendlineFormat#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.ChartTrendlineFormatLoadOptions): Excel.ChartTrendlineFormat;'
-      return:
-        type:
-          - 'excel!Excel.ChartTrendlineFormat:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface'
-  - uid: 'excel!Excel.ChartTrendlineFormat#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ChartTrendlineFormat;'
-      return:
-        type:
-          - 'excel!Excel.ChartTrendlineFormat:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.ChartTrendlineFormat#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly line: Excel.ChartLineFormat;'
+    return:
+      type: <xref uid="excel!Excel.ChartLineFormat:class" />
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/10-chart/chart-trendlines.yaml\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let seriesCollection = sheet.charts.getItemAt(0).series; \n\n    // Get the color of the chart trendline. \n    let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);\n    let line = trendline.format.line;\n    line.load(\"color\");\n\n    await context.sync();\n\n    console.log(\"The trendline color is:\" + line.color);\n});\n```\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/10-chart/chart-trendlines.yaml\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let seriesCollection = sheet.charts.getItemAt(0).series; \n    let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);\n\n    // Set format of the trendline to a solid, red line.\n    let line = trendline.format.line;\n    line.color = '#FF0000';\n\n    await context.sync();\n\n    console.log(\"The trendline color has been set to:\" + line.color);\n});\n```"
+methods:
+- name: load(options)
+  uid: excel!Excel.ChartTrendlineFormat#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.ChartTrendlineFormatLoadOptions): Excel.ChartTrendlineFormat;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.ChartTrendlineFormat:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.ChartTrendlineFormat#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.ChartTrendlineFormat;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.ChartTrendlineFormat:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.ChartTrendlineFormat#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.ChartTrendlineFormat;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.ChartTrendlineFormat;
-      return:
-        type:
-          - 'excel!Excel.ChartTrendlineFormat:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.ChartTrendlineFormat#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
+                }
+    return:
+      type: <xref uid="excel!Excel.ChartTrendlineFormat:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.ChartTrendlineFormat#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      `set(properties: Excel.ChartTrendlineFormat): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ChartTrendlineFormatUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ChartTrendlineFormat#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.ChartTrendlineFormat): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.ChartTrendlineFormat:class'
-  - uid: 'excel!Excel.ChartTrendlineFormat#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 ChartTrendlineFormat 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartTrendlineFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.ChartTrendlineFormatData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTrendlineFormatData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.ChartLineFormat:class'
-    name: Excel.ChartLineFormat
-  - uid: 'excel!Excel.ChartTrendlineFormat:class'
-    name: Excel.ChartTrendlineFormat
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartTrendlineFormatLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
-    name: Interfaces.ChartTrendlineFormatUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatData:interface'
-    name: Excel.Interfaces.ChartTrendlineFormatData
+
+    `set(properties: Excel.ChartTrendlineFormat): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ChartTrendlineFormatUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.ChartTrendlineFormat#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.ChartTrendlineFormat): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.ChartTrendlineFormat:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.ChartTrendlineFormat#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 ChartTrendlineFormat 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.ChartTrendlineFormatData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.ChartTrendlineFormatData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTrendlineFormatData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 9e5e7530d34f44cc74aa235d3a1ce199faaabe95
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49184691"
