--- a/docs/docs-ref-autogen/excel_online/excel/excel.datetimeformatinfo.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.datetimeformatinfo.yml
@@ -1,199 +1,188 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.DatetimeFormatInfo:class'
-    summary: |-
-      定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
+### YamlMime:TSType
+name: Excel.DatetimeFormatInfo
+uid: excel!Excel.DatetimeFormatInfo:class
+package: excel!
+fullName: Excel.DatetimeFormatInfo
+summary: >-
+  定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.DatetimeFormatInfo
-    fullName: Excel.DatetimeFormatInfo
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.DatetimeFormatInfo#context:member'
-      - 'excel!Excel.DatetimeFormatInfo#dateSeparator:member'
-      - 'excel!Excel.DatetimeFormatInfo#load:member(1)'
-      - 'excel!Excel.DatetimeFormatInfo#load:member(2)'
-      - 'excel!Excel.DatetimeFormatInfo#load:member(3)'
-      - 'excel!Excel.DatetimeFormatInfo#longDatePattern:member'
-      - 'excel!Excel.DatetimeFormatInfo#longTimePattern:member'
-      - 'excel!Excel.DatetimeFormatInfo#shortDatePattern:member'
-      - 'excel!Excel.DatetimeFormatInfo#timeSeparator:member'
-      - 'excel!Excel.DatetimeFormatInfo#toJSON:member(1)'
-  - uid: 'excel!Excel.DatetimeFormatInfo#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.DatetimeFormatInfo#dateSeparator:member'
-    summary: |-
-      获取用作日期分隔符的字符串。 这取决于当前的系统设置。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dateSeparator
-    fullName: dateSeparator
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly dateSeparator: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.DatetimeFormatInfo#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.DatetimeFormatInfoLoadOptions): Excel.DatetimeFormatInfo;'
-      return:
-        type:
-          - 'excel!Excel.DatetimeFormatInfo:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.DatetimeFormatInfoLoadOptions:interface'
-  - uid: 'excel!Excel.DatetimeFormatInfo#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.DatetimeFormatInfo;'
-      return:
-        type:
-          - 'excel!Excel.DatetimeFormatInfo:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.DatetimeFormatInfo#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+  \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.DatetimeFormatInfo#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: dateSeparator
+  uid: excel!Excel.DatetimeFormatInfo#dateSeparator:member
+  package: excel!
+  fullName: dateSeparator
+  summary: >-
+    获取用作日期分隔符的字符串。 这取决于当前的系统设置。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly dateSeparator: string;'
+    return:
+      type: string
+- name: longDatePattern
+  uid: excel!Excel.DatetimeFormatInfo#longDatePattern:member
+  package: excel!
+  fullName: longDatePattern
+  summary: >-
+    获取长日期值的格式字符串。 这取决于当前的系统设置。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly longDatePattern: string;'
+    return:
+      type: string
+- name: longTimePattern
+  uid: excel!Excel.DatetimeFormatInfo#longTimePattern:member
+  package: excel!
+  fullName: longTimePattern
+  summary: >-
+    获取长时间值的格式字符串。 这取决于当前的系统设置。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly longTimePattern: string;'
+    return:
+      type: string
+- name: shortDatePattern
+  uid: excel!Excel.DatetimeFormatInfo#shortDatePattern:member
+  package: excel!
+  fullName: shortDatePattern
+  summary: >-
+    获取短日期值的格式字符串。 这取决于当前的系统设置。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly shortDatePattern: string;'
+    return:
+      type: string
+- name: timeSeparator
+  uid: excel!Excel.DatetimeFormatInfo#timeSeparator:member
+  package: excel!
+  fullName: timeSeparator
+  summary: >-
+    获取用作时间分隔符的字符串。 这取决于当前的系统设置。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly timeSeparator: string;'
+    return:
+      type: string
+methods:
+- name: load(options)
+  uid: excel!Excel.DatetimeFormatInfo#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.DatetimeFormatInfoLoadOptions): Excel.DatetimeFormatInfo;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.DatetimeFormatInfoLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.DatetimeFormatInfo:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.DatetimeFormatInfo#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.DatetimeFormatInfo;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.DatetimeFormatInfo:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.DatetimeFormatInfo#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.DatetimeFormatInfo;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.DatetimeFormatInfo;
-      return:
-        type:
-          - 'excel!Excel.DatetimeFormatInfo:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.DatetimeFormatInfo#longDatePattern:member'
-    summary: |-
-      获取长日期值的格式字符串。 这取决于当前的系统设置。
-
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: longDatePattern
-    fullName: longDatePattern
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly longDatePattern: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.DatetimeFormatInfo#longTimePattern:member'
-    summary: |-
-      获取长时间值的格式字符串。 这取决于当前的系统设置。
-
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: longTimePattern
-    fullName: longTimePattern
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly longTimePattern: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.DatetimeFormatInfo#shortDatePattern:member'
-    summary: |-
-      获取短日期值的格式字符串。 这取决于当前的系统设置。
-
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: shortDatePattern
-    fullName: shortDatePattern
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly shortDatePattern: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.DatetimeFormatInfo#timeSeparator:member'
-    summary: |-
-      获取用作时间分隔符的字符串。 这取决于当前的系统设置。
-
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: timeSeparator
-    fullName: timeSeparator
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly timeSeparator: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.DatetimeFormatInfo#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始格式对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.DatetimeFormatInfoData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.DatetimeFormatInfoData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.DatetimeFormatInfoData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.DatetimeFormatInfo:class'
-    name: Excel.DatetimeFormatInfo
-  - uid: 'excel!Excel.Interfaces.DatetimeFormatInfoLoadOptions:interface'
-    name: Excel.Interfaces.DatetimeFormatInfoLoadOptions
-  - uid: 'excel!Excel.Interfaces.DatetimeFormatInfoData:interface'
-    name: Excel.Interfaces.DatetimeFormatInfoData
+                }
+    return:
+      type: <xref uid="excel!Excel.DatetimeFormatInfo:class" />
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.DatetimeFormatInfo#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始格式对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.DatetimeFormatInfoData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.DatetimeFormatInfoData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.DatetimeFormatInfoData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 596900290c1bc15bc30c1e36f1b269eb95a0d46e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49184439"
