--- a/docs/docs-ref-autogen/excel_online/excel/excel.fiveratingset.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.fiveratingset.yml
@@ -1,74 +1,78 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.FiveRatingSet:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.FiveRatingSet
-    fullName: Excel.FiveRatingSet
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.FiveRatingSet#fourBars:member'
-      - 'excel!Excel.FiveRatingSet#noBars:member'
-      - 'excel!Excel.FiveRatingSet#oneBar:member'
-      - 'excel!Excel.FiveRatingSet#threeBars:member'
-      - 'excel!Excel.FiveRatingSet#twoBars:member'
-  - uid: 'excel!Excel.FiveRatingSet#fourBars:member'
-    name: fourBars
-    fullName: fourBars
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'fourBars: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveRatingSet#noBars:member'
-    name: noBars
-    fullName: noBars
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'noBars: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveRatingSet#oneBar:member'
-    name: oneBar
-    fullName: oneBar
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'oneBar: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveRatingSet#threeBars:member'
-    name: threeBars
-    fullName: threeBars
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'threeBars: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FiveRatingSet#twoBars:member'
-    name: twoBars
-    fullName: twoBars
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'twoBars: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.FiveRatingSet
+uid: excel!Excel.FiveRatingSet:interface
+package: excel!
+fullName: Excel.FiveRatingSet
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: fourBars
+  uid: excel!Excel.FiveRatingSet#fourBars:member
+  package: excel!
+  fullName: fourBars
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'fourBars: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: noBars
+  uid: excel!Excel.FiveRatingSet#noBars:member
+  package: excel!
+  fullName: noBars
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'noBars: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: oneBar
+  uid: excel!Excel.FiveRatingSet#oneBar:member
+  package: excel!
+  fullName: oneBar
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'oneBar: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: threeBars
+  uid: excel!Excel.FiveRatingSet#threeBars:member
+  package: excel!
+  fullName: threeBars
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'threeBars: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: twoBars
+  uid: excel!Excel.FiveRatingSet#twoBars:member
+  package: excel!
+  fullName: twoBars
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'twoBars: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: 0b34dd7f34d563c3426cd4804334d131644ed841
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49184271"
